--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                                         <div class="collapse navbar-collapse" id="navbar-collapse-1">
                                             <ul class="navbar-nav ml-xl-auto">
                                                 <li class="nav-item dropdown active mega-menu mega-menu--wide">
-                                                    <a href="/" class="nav-link">Home</a>
+                                                    <a href="#logo" class="nav-link">Home</a>
                                                 </li>
                                                 <li class="nav-item dropdown active mega-menu mega-menu--wide">
-                                                    <a href="/" class="nav-link">Maintenance</a>
+                                                    <a href="#why_us" class="nav-link">Why WordPress Guy</a>
                                                 </li>
                                                 <li class="nav-item dropdown active mega-menu mega-menu--wide">
-                                                    <a href="/" class="nav-link">Optimisation</a>
+                                                    <a href="#packages" class="nav-link">Maintenance Packages</a>
                                                 </li>
                                                 <li class="nav-item dropdown  mega-menu mega-menu--wide">
                                                     <a href="#" class="nav-link dropdown-toggle" id="second-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
@@ -421,7 +421,7 @@
                             <div class="col-lg-6">
                                 <div class="footer-content text-center padding-ver-clear">
                                     <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="/images/worddpress_guy_long_logo.png" alt="WordPress Guy" style="width: 100%; max-width: 500px;"></div>
-                                    <p>WordPress Guy is dedicated to helping people who need assistance with maintenance of their websites. We promise to provide a transparent, professional and quality service.</p>
+                                    <p>WordPress Guy is dedicated to helping websites who need assistance with maintenance and optimisation. We provide a high quality, transparent and professional service.</p>
 
                                     <ul class="list-inline mb-20">
                                         <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Cape Town, South Africa</li>
