Updates and New Pages
Home pag eimprovements (navigation and minor code adjustments for styling and funtionality)

t&c's privacy and cookie policy pages created - needs a review.

CHECK - TO DO LIST

--- a/index.html
+++ b/index.html
@@ -2,11 +2,33 @@
 <html dir="ltr" lang="en">
 <head>
     <meta charset="utf-8">
-    <title>WordPress Guy | Home</title>
-    <meta name="author" content="author">
-    <meta name="robots" content="noimageindex">
+    <title>WordPress Guy | WordPress Maintenance Specialist</title>
+    <meta name="description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme & plugin updates and custom WordPress development.">
+    <meta name="keywords" content="wordpress maintenance, wordpress, backup, wordpress backup, wordpress theme update, wordpress plugin update, wordpress core_update, development, wordpress development">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="WordPress Guy">
+    <link rel="canonical" href="https://wordpressguy.co.za/">
     <meta name="theme-color" content="#000000">
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="WordPress Guy | Maintenance Specialists">
+    <meta name="twitter:description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme & plugin updates and custom WordPress development.">
+    <meta name="twitter:image" content="http://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
+    <meta name="twitter:image:alt" content="WordPress Guy | Maintenance Specialists">
+    <meta name="twitter:site" content="@WordPressGuy">
+    <meta name="twitter:creator" content="@WordpessGuy">
+
+    <!-- Open Graph data -->
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="WordPress Guy">
+    <meta property="og:title" content="WordPress Guy | Maintenance Specialists">
+    <meta property="og:description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme & plugin updates and custom WordPress development.">
+    <meta property="og:url" content="https://wordpressguy.co.za/">
+    <meta property="og:image" content="http://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
+    <meta property="og:image:width" content="503">
+    <meta property="og:image:height" content="90">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700" rel="stylesheet">
@@ -43,13 +65,13 @@
                                         <div class="collapse navbar-collapse" id="navbar-collapse-1">
                                             <ul class="navbar-nav ml-xl-auto">
                                                 <li class="nav-item active mega-menu mega-menu--wide">
-                                                    <a href="#home" class="nav-link">Home</a>
+                                                    <a href="index.html" class="nav-link">Home</a>
                                                 </li>
                                                 <li class="nav-item dropdown active mega-menu mega-menu--wide">
-                                                    <a href="#why_us" class="nav-link">Why WordPress Guy</a>
+                                                    <a href="index.html#why_us" class="nav-link">Why WordPress Guy</a>
                                                 </li>
                                                 <li class="nav-item dropdown active mega-menu mega-menu--wide">
-                                                    <a href="#packages" class="nav-link">Maintenance Packages</a>
+                                                    <a href="index.html#packages" class="nav-link">Maintenance Packages</a>
                                                 </li>
                                                 <li class="nav-item dropdown active mega-menu mega-menu--wide">
                                                     <a href="#contact_us" class="nav-link">Contact Us</a>
@@ -60,13 +82,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!--
-                        <div class="col-auto hidden-md-down pl-0 pl-md-1" style="padding-top: 2px;">
-                            <div class="header-dropdown-buttons">
-                                <a href="#contact_us" class="btn btn-sm btn-default">Contact Us <i class="fa fa-envelope-o pl-1"></i></a>
-                            </div>
-                        </div>
-                        -->
                     </div>
                 </div>
             </header>
@@ -139,7 +154,7 @@
             </div>
             <div id="why_us"></div>
         </section><!-- /introduction -->
-        <section class="pv-40 padding-bottom-clear light-gray-bg">
+        <section class="pv-40 light-gray-bg">
             <div class="container">
                 <div class="row justify-content-lg-center">
                     <div class="col-lg-10">
@@ -209,7 +224,7 @@
                 </div>
             </div>
         </section><!-- /why us -->
-        <section class="pv-40 padding-bottom-clear">
+        <section class="pv-40">
             <div class="container-fluid">
                 <div class="row justify-content-lg-center">
                     <div class="col-lg-10">
@@ -251,19 +266,14 @@
                     <div class="client">
                         <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="/images/django_wordpressguy.png" alt="Django Framework Logo" title="Django Framework" width="200px" style="width: 100%; max-width:200px;">
                     </div>
-                    <!--
-                    <div class="client">
-                        <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="/images/afrihost_wordpressguy.png" alt="Afrihost Logo" title="Afrihost" style="width:100%; max-width:200px;">
-                    </div>
-                    -->
                     <div class="client">
                         <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="/images/aws_wordpressguy.png" alt="AWS Logo" title="Amazon Web Services" style="width:100%; max-width:200px;">
                     </div>
                 </div>
             </div>
-            <div id="packages"></div>
         </section><!-- /tech_stack -->
-        <section class="pv-30">
+        <div id="packages"></div>
+        <section class="pv-30 light-gray-bg">
             <div class="container pv-30">
                 <div class="row">
                     <div class="col-12">
@@ -278,7 +288,7 @@
                 <div class="pricing-tables circle-head hc-element-invisible" data-animation-effect="fadeInUpSmall" data-effect-delay="0">
                     <div class="row grid-space-15">
                         <div class="col-md-4">
-                            <div class="plan hc-shadow light-gray-bg bordered">
+                            <div class="plan hc-shadow bordered">
                                 <div class="dark-bg py-5">
                                     <h3>Standard</h3>
                                     <div class="price"><span>R500</span> p/m.</div>
@@ -307,7 +317,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="plan hc-shadow light-gray-bg bordered">
+                            <div class="plan hc-shadow bordered">
                                 <div class="default-bg py-5">
                                     <h3>e-Commerce</h3>
                                     <div class="price">
@@ -340,7 +350,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="plan hc-shadow light-gray-bg bordered">
+                            <div class="plan hc-shadow bordered">
                                 <div class="dark-bg py-5">
                                     <h3>Corporate &amp; Agency</h3>
                                     <div class="price">
@@ -370,7 +380,7 @@
                         <div class="call-to-action text-center">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <p class="mt-3"><a href="tel: 0027 82 305 7490" class="btn btn-animated btn-lg btn-gray-transparent">Telephone <i class="fa fa-phone pl-20"></i></a></p>
+                                    <p class="mt-3"><a href="tel: 0027823057490" class="btn btn-animated btn-lg btn-gray-transparent">Telephone <i class="fa fa-phone pl-20"></i></a></p>
                                 </div>
 
                                 <div class="col-md-4">
@@ -378,7 +388,7 @@
                                     <h2 class="mt-4">We're Ready To Help You.</h2>
                                 </div>
                                 <div class="col-md-4">
-                                    <p class="mt-3"><a href="mailto:callum_thom@live.co.za?Subject=Corporate%20Agency%20Maintenance%20Quote" class="btn btn-animated btn-lg btn-gray-transparent">Email <i class="fa fa-envelope-o pl-20"></i></a></p>
+                                    <p class="mt-3"><a href="mailto:callum_thom@live.co.za?Subject=I%20need%20help" class="btn btn-animated btn-lg btn-gray-transparent">Email <i class="fa fa-envelope-o pl-20"></i></a></p>
                                 </div>
                             </div>
                         </div>
@@ -398,8 +408,8 @@
 
                                     <ul class="list-inline mb-20">
                                         <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Cape Town, South Africa</li>
-                                        <li class="list-inline-item"><a href="tel: 0027 82 305 7490" class="link-dark"><i class="text-default fa fa-phone pl-10 pr-1"></i>+27 82 305 7490</a></li>
-                                        <li class="list-inline-item"><a href="mailto: callum_thom@live.co.za" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>callum_thom@live.co.za</a></li>
+                                        <li class="list-inline-item"><a href="tel: 0027823057490" class="link-dark"><i class="text-default fa fa-phone pl-10 pr-1"></i>+27 82 305 7490</a></li>
+                                        <li class="list-inline-item"><a href="mailto: callum_thom@live.co.za?Subject=Lets%20Talk" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>callum_thom@live.co.za</a></li>
                                     </ul>
                                     <!--
                                     <ul class="social-links circle animated-effect-1 margin-clear">
@@ -411,7 +421,8 @@
                                     </ul>
                                     -->
                                     <div class="separator"></div>
-                                    <p><a href="">Terms &amp; Conditions</a> | <a href="">Privacy Policy</a> | <a href="">Cookie Policy</a></p>
+                                    <p>This website uses cookies and by continuing to browse our website you acknowledge and agree to the terms and conditions thereof. See links below for further information.</p>
+                                    <p><a href="/terms_and_conditions.html">Terms &amp; Conditions</a> | <a href="/privacy_policy.html">Privacy Policy</a> | <a href="/cookie_policy.html">Cookie Policy</a></p>
                                     <p class="text-center margin-clear">&copy; WordPress Guy. All Rights Reserved</p>
                                 </div>
                             </div>
