--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -114,7 +114,7 @@
             <div class="container">
                 <div class="row justify-content-lg-center">
                     <div class="col-lg-10">
-                        <h1 class="text-center mt-4 large">Our <strong>privacy</strong> <span class="text-default">Policy</span></h1>
+                        <h1 class="text-center mt-4 large">Our <strong>Privacy</strong> <span class="text-default">Policy</span></h1>
                         <div class="separator"></div>
                         <p class="text-right mt-2"><a href="/terms_and_conditions.html">Terms &amp; Conditions</a> | <a href="/privacy_policy.html">Privacy Policy</a> | <a href="/cookie_policy.html">Cookie Policy</a></p>
                         <h3>What information do we collect?</h3>
