--- a/cookie_policy.html
+++ b/cookie_policy.html
@@ -11,9 +11,26 @@
     <link rel="canonical" href="https://wordpressguy.co.za/cookie_policy.html">
     <meta name="theme-color" content="#000000">
 
+    <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/images/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/images/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/images/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/images/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/images/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="manifest" href="/images/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
+
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="WordPress Guy | Terms & Conditions">
+    <meta name="twitter:title" content="WordPress Guy | Cookie Policy">
     <meta name="twitter:description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme & plugin updates and custom WordPress development.">
     <meta name="twitter:image" content="http://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
     <meta name="twitter:image:alt" content="WordPress Guy | Maintenance Specialists">
@@ -23,7 +40,7 @@
     <!-- Open Graph data -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="WordPress Guy">
-    <meta property="og:title" content="WordPress Guy | Terms & Conditions">
+    <meta property="og:title" content="WordPress Guy | Cookie Policy">
     <meta property="og:description" content="WordPress Maintenance Specialists. We can help you with WordPress backups; core, theme & plugin updates and custom WordPress development.">
     <meta property="og:url" content="https://wordpressguy.co.za/cookie_policy.html">
     <meta property="og:image" content="http://wordpressguy.co.za/images/worddpress_guy_long_logo.png">
