Google analytics & email update
updated to new email (administrator)
implemented google analytics

--- a/cookie_policy.html
+++ b/cookie_policy.html
@@ -28,6 +28,9 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143744807-1"></script>
+    <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-143744807-1');</script>
+
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="WordPress Guy | Cookie Policy">
@@ -203,7 +206,7 @@
                                     <h2 class="mt-4">We're Ready To Help You.</h2>
                                 </div>
                                 <div class="col-md-4">
-                                    <p class="mt-3"><a href="mailto:callum_thom@live.co.za?Subject=I%20need%20help" class="btn btn-animated btn-lg btn-gray-transparent">Email <i class="fa fa-envelope-o pl-20"></i></a></p>
+                                    <p class="mt-3"><a href="mailto:administrator@wordpressguy.co.za?Subject=I%20need%20help" class="btn btn-animated btn-lg btn-gray-transparent">Email <i class="fa fa-envelope-o pl-20"></i></a></p>
                                 </div>
                             </div>
                         </div>
@@ -224,7 +227,7 @@
                                     <ul class="list-inline mb-20">
                                         <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Cape Town, South Africa</li>
                                         <li class="list-inline-item"><a href="tel: 0027823057490" class="link-dark"><i class="text-default fa fa-phone pl-10 pr-1"></i>+27 82 305 7490</a></li>
-                                        <li class="list-inline-item"><a href="mailto: callum_thom@live.co.za?Subject=Lets%20Talk" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>callum_thom@live.co.za</a></li>
+                                        <li class="list-inline-item"><a href="mailto: administrator@wordpressguy.co.za?Subject=Lets%20Talk" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>administrator@wordpressguy.co.za</a></li>
                                     </ul>
                                     <!--
                                     <ul class="social-links circle animated-effect-1 margin-clear">
