--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143744807-1"></script>
+    <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-143744807-1');</script>
+
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="WordPress Guy | Maintenance Specialists">
@@ -328,7 +331,7 @@
                                         <a href="#" class="pt-popover" data-toggle="popover" data-placement="right" data-content="Pre testing for any known bugs. Post testing to ensure bugs are fixed and updates are successful." title="Pre &amp; Post Testing" data-original-title="Pre &amp; Post Testing">Pre &amp; Post Testing</a>
                                     </li>
                                     <li>
-                                        <a href="mailto:callum_thom@live.co.za?Subject=Standard%20Maintenance%20Package" class="btn btn-dark radius-50 btn-animated btn-lg">Contact Us <i class="fa fa-envelope-open"></i></a>
+                                        <a href="mailto:administrator@wordpressguy.co.za?Subject=Standard%20Maintenance%20Package" class="btn btn-dark radius-50 btn-animated btn-lg">Contact Us <i class="fa fa-envelope-open"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -360,7 +363,7 @@
                                             <a href="#" class="pt-popover" data-toggle="popover" data-placement="right" data-content="Pre testing for any known bugs. Post testing to ensure bugs are fixed and updates are successful." title="Pre &amp; Post Testing" data-original-title="Pre &amp; Post Testing">Pre &amp; Post Testing</a>
                                         </li>
                                         <li>
-                                            <a href="mailto:callum_thom@live.co.za?Subject=E-Commerce%20Maintenance%20Package" class="btn btn-default btn-animated btn-lg radius-50">Contact Us <i class="fa fa-envelope-open"></i></a>
+                                            <a href="mailto:administrator@wordpressguy.co.za?Subject=E-Commerce%20Maintenance%20Package" class="btn btn-default btn-animated btn-lg radius-50">Contact Us <i class="fa fa-envelope-open"></i></a>
                                         </li>
                                     </ul>
                                 </ul>
@@ -380,7 +383,7 @@
                                         <p>All websites will receive the same services as the e-Commerce package.</p>
                                     </li>
                                     <li>
-                                        <a href="mailto:callum_thom@live.co.za?Subject=Corporate%20Agency%20Maintenance%20Quote" class="btn btn-dark radius-50 btn-animated btn-lg">Contact Us <i class="fa fa-envelope-open"></i></a>
+                                        <a href="mailto:administrator@wordpressguy.co.za?Subject=Corporate%20Agency%20Maintenance%20Quote" class="btn btn-dark radius-50 btn-animated btn-lg">Contact Us <i class="fa fa-envelope-open"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -405,7 +408,7 @@
                                     <h2 class="mt-4">We're Ready To Help You.</h2>
                                 </div>
                                 <div class="col-md-4">
-                                    <p class="mt-3"><a href="mailto:callum_thom@live.co.za?Subject=I%20need%20help" class="btn btn-animated btn-lg btn-gray-transparent">Email <i class="fa fa-envelope-o pl-20"></i></a></p>
+                                    <p class="mt-3"><a href="mailto:administrator@wordpressguy.co.za?Subject=I%20need%20help" class="btn btn-animated btn-lg btn-gray-transparent">Email <i class="fa fa-envelope-o pl-20"></i></a></p>
                                 </div>
                             </div>
                         </div>
@@ -426,7 +429,7 @@
                                     <ul class="list-inline mb-20">
                                         <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Cape Town, South Africa</li>
                                         <li class="list-inline-item"><a href="tel: 0027823057490" class="link-dark"><i class="text-default fa fa-phone pl-10 pr-1"></i>+27 82 305 7490</a></li>
-                                        <li class="list-inline-item"><a href="mailto: callum_thom@live.co.za?Subject=Lets%20Talk" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>callum_thom@live.co.za</a></li>
+                                        <li class="list-inline-item"><a href="mailto: administrator@wordpressguy.co.za?Subject=Lets%20Talk" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>administrator@wordpressguy.co.za</a></li>
                                     </ul>
                                     <!--
                                     <ul class="social-links circle animated-effect-1 margin-clear">
