--- a/contact_us.html
+++ b/contact_us.html
@@ -133,37 +133,33 @@
             <div class="container">
                 <div class="row justify-content-lg-center">
                     <div class="col-lg-10">
-                        <h1 class="text-center mt-4 large">Contact <span class="text-default">Us</span></h1>
+                        <h1 class="text-center mt-4 large">Please <span class="text-default">Contact</span> Us</h1>
                         <div class="separator"></div>
                         <form id="contact-form" method="post">
-                            <h4>Name:</h4>
-                            <input type="text" style="height:35px;" id="name-input" placeholder="Enter name here…" class="form-control" style="width:100%;" /><br />
-                            <h4>Email:</h4>
-                            <input type="email" style="height:35px;" id="email-input" placeholder="Enter email here…" class="form-control" style="width:100%;" /><br />
-                            <h4>How can we help you?</h4>
-                            <textarea id="description-input" rows="3" placeholder="Enter your message…" class="form-control" style="width:100%;"></textarea><br />
-                            <div class="g-recaptcha" data-sitekey="6Lc7cVMUAAAAAM1yxf64wrmO8gvi8A1oQ_ead1ys" class="form-control" style="width:100%;"></div>
-                            <button type="button" onClick="submitToAPI(event)" class="btn btn-lg" style="margin-top:20px;">Submit</button>
+                            <div id="messageSuccess" class="alert alert-success alert-dismissible fade show">
+                                <p><strong>Thank you!</strong></p>
+                                <p>Your message has been sent. We will respond as soon as possible.</p>
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="form-group input-group-sm">
+                                <label for="name">Name</label>
+                                <input id="name" class="form-control" type="text" style="height:35px;" placeholder="Enter name here…">
+                                <div id="nameError"></div>
+                            </div>
+                            <div class="form-group input-group-sm">
+                                <label for="email">Email</label>
+                                <input id="email" class="form-control" type="email" placeholder="Enter email here…">
+                                <div id="emailError" class="errorMessages"></div>
+                            </div>
+                            <div class="form-group input-group-sm">
+                                <label for="message">How can we help you?</label>
+                                <textarea id="message" class="form-control" rows="5" placeholder="Enter your message…"></textarea>
+                                <div id="messageError"></div>
+                            </div>
+                                <button class="btn btn-animated btn-lg btn-default-transparent" type="button" onClick="submitToAPI(event)">Submit <i class="fa fa-envelope-o pl-20"></i></button>
                         </form>
-
-
-
-                        <!--<form id="contactForm" class="" action="" method="post">
-                        <div class="form-group input-group-sm">
-                            <label for="fieldName">Name</label> <input id="fieldName" class="form-control" name="" type="text" />
-                        </div>
-                        <div class="form-group input-group-sm">
-                            <label for="fieldEmail">Email</label> <input id="fieldEmail" class="form-control" name="" type="email" class="js-cm-email-input" required />
-                        </div>
-                        <div class="form-group input-group-sm">
-                            <label for="fieldContactNumber">Contact Number</label> <input id="fieldContactNumber" class="form-control" name="" type="text" />
-                        </div>
-                        <div>
-                        <button class="" type="submit">Subscribe</button>
-                        </div>
-                        </form>-->
-
-
                     </div>
                 </div>
             </div>
@@ -234,9 +230,12 @@
     <script type="text/javascript" src="/js/extensions/revolution.extension.carousel.min.js"></script>
     <script type="text/javascript" src="/js/extensions/revolution.extension.navigation.min.js"></script>
     <script>
+        $("#messageSuccess").hide();
+        $("#name, #email, #message").css("border-color", "");
+        // Function to defer images on load and then load them once the rest of the page is loaded.
         function init() {
-            var imgDefer = document.getElementsByTagName('img');
-            for (var i = 0; i < imgDefer.length; i++) {
+            let imgDefer = document.getElementsByTagName('img');
+            for (let i = 0; i < imgDefer.length; i++) {
                 if (imgDefer[i].getAttribute('data-src')) {
                     imgDefer[i].setAttribute('src', imgDefer[i].getAttribute('data-src'));
                 }
@@ -244,57 +243,100 @@
         }
         window.onload = init;
 
+        // Function to validate email address through regular expression
+        function validateEmail(sEmail) {
+            let filter = /^[\w-.+]+@[a-zA-Z0-9.-]+.[a-zA-z0-9]{2,4}$/;
+            if (filter.test(sEmail)) {
+                return true;
+            } else {
+                return false;
+            };
+        };
         function submitToAPI(e) {
             e.preventDefault();
-            var URL = "https://62sz3zea1f.execute-api.eu-west-1.amazonaws.com/a1/contact-us";
 
-            var Namere = /[A-Za-z]{1}[A-Za-z]/;
-            if (!Namere.test($("#name-input").val())) {
-                alert("Name can not less than 2 char");
-                return;
+            let nameError = "";
+            let emailError = "";
+            let messageError = "";
+
+            if ($("#name").val() === ""){
+                nameError = "Name required";
+                $("#nameError").show();
+                $("#name").removeClass("is-valid").addClass("is-invalid");
+            }else if ($("#name").val().match("^[a-zA-Z' .,\s-]{0,150}$")) {
+                nameError = "";
+                $("#nameError").hide();
+                $("#name").removeClass("is-invalid").addClass("is-valid");
+            }else{
+                nameError = "Only letters, spaces, hyphens and apostrophes allowed."
+                $("#nameError").show();
+                $("#name").removeClass("is-valid").addClass("is-invalid");
             }
-            if ($("#email-input").val() == "") {
-                alert("Please enter your email id");
-                return;
+            $("#nameError").html('<div class="alert alert-danger" role="alert" style="padding:5px; margin:3px;">' + nameError + '</div>');
+
+            sEmail = $("#email").val();
+            if ($("#email").val() === "") {
+                emailError = "Email required";
+                $("#emailError").show();
+                $("#email").removeClass("is-valid").addClass("is-invalid");
+            } else if (validateEmail(sEmail)) {
+                emailError = "";
+                $("#emailError").hide();
+                $("#email").removeClass("is-invalid").addClass("is-valid");
+            }else{
+                emailError = "Invalid email address";
+                $("#emailError").show();
+                $("#email").removeClass("is-valid").addClass("is-invalid");
             }
+            $("#emailError").html('<div class="alert alert-danger" role="alert" style="padding:5px; margin:3px;">' + emailError + '</div>');
 
-            var reeamil = /^([\w-\.]+@([\w-]+\.)+[\w-]{2,6})?$/;
-            if (!reeamil.test($("#email-input").val())) {
-                alert("Please enter valid email address");
-                return;
+            if ($("#message").val() === "") {
+                messageError = "Please enter your message";
+                $("#messageError").show();
+                $("#message").removeClass("is-valid").addClass("is-invalid");
+
+            }else{
+                messageError = "";
+                $("#messageError").hide();
+                $("#message").removeClass("is-invalid").addClass("is-valid");
             }
+            $("#messageError").html('<div class="alert alert-danger" role="alert" style="padding:5px; margin:3px;">' + messageError + '</div>');
 
-            var name = $("#name-input").val();
-            var email = $("#email-input").val();
-            var desc = $("#description-input").val();
-            var data = {
-                name: name,
-                email: email,
-                desc: desc
-            };
+            if (nameError || emailError || messageError !== "") {
+                // check for errors - if found block submit
+                return;
+            }else{
+                // all good - allow submit
+                let name = $("#name").val();
+                let email = $("#email").val();
+                let desc = $("#message").val();
+                let data = {
+                    name: name,
+                    email: email,
+                    desc: desc
+                };
+                $.ajax({
+                    type: "POST",
+                    url: "https://62sz3zea1f.execute-api.eu-west-1.amazonaws.com/a1/contact-us",
+                    dataType: "json",
+                    crossDomain: "true",
+                    contentType: "application/json; charset=utf-8",
+                    data: JSON.stringify(data),
 
-            $.ajax({
-                type: "POST",
-                url: "https://62sz3zea1f.execute-api.eu-west-1.amazonaws.com/a1/contact-us",
-                dataType: "json",
-                crossDomain: "true",
-                contentType: "application/json; charset=utf-8",
-                data: JSON.stringify(data),
-
-
-                success: function () {
-                    // clear form and show a success message
-                    alert("Successfull");
-                    document.getElementById("contact-form").reset();
-                    location.reload();
-                },
-                error: function () {
-                    // show an error message
-                    alert("UnSuccessfull");
-                }
-            });
+                    success: function () {
+                        // clear form and show a success message
+                        $("#messageSuccess").show();
+                        $("#name, #email, #message").removeClass("is-valid");
+                        $("#name, #email, #message").css("border-color", "#e1e1e1")
+                        document.getElementById("contact-form").reset();
+                    },
+                    error: function () {
+                        alert("An error occurred. Please try again later.");
+                    }
+                });
+                return true;
+            }
         }
-
     </script>
 </body>
 
