--- a/do_not_delete.html
+++ b/do_not_delete.html
@@ -129,12 +129,38 @@
                 </div>
             </div>
         </div><!-- /main slider image -->
+        <div class="dark-translucent-bg footer-top animated-text default-hovered" style="">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="call-to-action text-center">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <p class="mt-3"><a href="tel: 0027823057490" class="btn btn-animated btn-lg btn-gray-transparent">Telephone <i class="fa fa-phone pl-20"></i></a></p>
+                                </div>
+
+                                <div class="col-md-4">
+                                    <h2 class="mt-4">Talk to Us.</h2>
+                                    <h2 class="mt-4">We're Ready To Help You.</h2>
+                                </div>
+                                <div class="col-md-4">
+                                    <p class="mt-3"><a href="mailto:administrator@wordpressguy.co.za?Subject=I%20need%20help" class="btn btn-animated btn-lg btn-gray-transparent">Email <i class="fa fa-envelope-o pl-20"></i></a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!-- /ribbon -->
         <section class="pv-40 light-gray-bg">
             <div class="container">
                 <div class="row justify-content-lg-center">
                     <div class="col-lg-10">
                         <h1 class="text-center mt-4 large">Please <span class="text-default">Contact</span> Us</h1>
                         <div class="separator"></div>
+
+                        <p>Please complete the form and send us any requests or questions that you may have regarding your Wordpress website.</p>
+
                         <form id="contact-form" method="post">
                             <div id="messageSuccess" class="alert alert-success alert-dismissible fade show">
                                 <p><strong>Thank you!</strong></p>
@@ -164,29 +190,18 @@
                 </div>
             </div>
         </section><!-- /contact us form -->
-        <div class="dark-translucent-bg footer-top animated-text default-hovered" style="">
+        <div class="default-bg footer-top">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div class="call-to-action text-center">
+                        <div class="text-center">
                             <div class="row">
-                                <div class="col-md-4">
-                                    <p class="mt-3"><a href="tel: 0027823057490" class="btn btn-animated btn-lg btn-gray-transparent">Telephone <i class="fa fa-phone pl-20"></i></a></p>
-                                </div>
-
-                                <div class="col-md-4">
-                                    <h2 class="mt-4">Talk to Us.</h2>
-                                    <h2 class="mt-4">We're Ready To Help You.</h2>
-                                </div>
-                                <div class="col-md-4">
-                                    <p class="mt-3"><a href="mailto:administrator@wordpressguy.co.za?Subject=I%20need%20help" class="btn btn-animated btn-lg btn-gray-transparent">Email <i class="fa fa-envelope-o pl-20"></i></a></p>
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div><!-- /ribbon -->
+        </div><!-- /red ribbon -->
 
         <footer id="footer" class="clearfix">
             <div class="footer">
