--- a/index.html
+++ b/index.html
@@ -413,17 +413,42 @@
                             <div class="form-group input-group-sm">
                                 <label for="name">Name</label>
                                 <input id="name" class="form-control" type="text" style="height:35px;" placeholder="Enter name here…">
-                                <div id="nameError"></div>
+                                <div class="valid-feedback pl-2">
+                                    Looks good!
+                                </div>
+                                <div class="invalid-feedback pl-2">
+                                    Valid name required. Only letters, spaces, hyphens and apostrophes allowed.
+                                </div>
                             </div>
                             <div class="form-group input-group-sm">
                                 <label for="email">Email</label>
                                 <input id="email" class="form-control" type="email" placeholder="Enter email here…">
-                                <div id="emailError" class="errorMessages"></div>
+                                <div class="valid-feedback pl-2">
+                                    Looks good!
+                                </div>
+                                <div class="invalid-feedback pl-2">
+                                    Valid email address required.
+                                </div>
                             </div>
                             <div class="form-group input-group-sm">
                                 <label for="message">How can we help you?</label>
                                 <textarea id="message" class="form-control" rows="5" placeholder="Enter your message…"></textarea>
-                                <div id="messageError"></div>
+                                <div class="valid-feedback pl-2">
+                                    Looks good!
+                                </div>
+                                <div class="invalid-feedback pl-2">
+                                    Please enter a message.
+                                </div>
+                            </div>
+                            <div class="form-group input-group-sm">
+                                <label for="security">Security Question</label>
+                                <input id="security" class="form-control" type="text" placeholder="25 * 4 = ?">
+                                <div class="valid-feedback pl-2">
+                                    Looks good!
+                                </div>
+                                <div class="invalid-feedback pl-2">
+                                    Please enter the correct answer.
+                                </div>
                             </div>
                             <button class="btn btn-animated btn-lg btn-default-transparent" type="button" onClick="submitToAPI(event)">Submit <i class="fa fa-envelope-o pl-20"></i></button>
                         </form>
@@ -479,120 +504,100 @@
             </div>
         </footer><!-- /footer -->
     </div>
-    <script src="/js/combined_min.js"></script>
-    <script src="/js/jquery.themepunch.tools.min.js"></script>
-    <script src="/js/jquery.themepunch.revolution.min.js"></script>
+    <script type="text/javascript" src="/js/combined_min.js"></script>
+    <script type="text/javascript" src="/js/jquery.themepunch.tools.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.themepunch.revolution.min.js"></script>
     <script type="text/javascript" src="/js/extensions/revolution.extension.carousel.min.js"></script>
     <script type="text/javascript" src="/js/extensions/revolution.extension.navigation.min.js"></script>
-    <script>
-        $("#messageSuccess").hide();
-        $("#name, #email, #message").css("border-color", "");
-        // Function to defer images on load and then load them once the rest of the page is loaded.
-        function init() {
-            let imgDefer = document.getElementsByTagName('img');
-            for (let i = 0; i < imgDefer.length; i++) {
-                if (imgDefer[i].getAttribute('data-src')) {
-                    imgDefer[i].setAttribute('src', imgDefer[i].getAttribute('data-src'));
+    <script type="text/javascript">
+            // Function to defer images on load and then load them once the rest of the page is loaded.
+            function init() {
+                let imgDefer = document.getElementsByTagName('img');
+                for (let i = 0; i < imgDefer.length; i++) {
+                    if (imgDefer[i].getAttribute('data-src')) {
+                        imgDefer[i].setAttribute('src', imgDefer[i].getAttribute('data-src'));
+                    }
                 }
             }
-        }
-        window.onload = init;
+            window.onload = init;
 
-        // Function to validate email address through regular expression
-        function validateEmail(sEmail) {
-            let filter = /^[\w-.+]+@[a-zA-Z0-9.-]+.[a-zA-z0-9]{2,4}$/;
-            if (filter.test(sEmail)) {
-                return true;
-            } else {
-                return false;
-            };
-        };
-        // Form validation
-        function submitToAPI(e) {
-            e.preventDefault();
-
-            let nameError = "";
-            let emailError = "";
-            let messageError = "";
-
-            if ($("#name").val() === ""){
-                nameError = "Name required";
-                $("#nameError").show();
-                $("#name").removeClass("is-valid").addClass("is-invalid");
-            }else if ($("#name").val().match("^[a-zA-Z' .,\s-]{0,150}$")) {
-                nameError = "";
-                $("#nameError").hide();
-                $("#name").removeClass("is-invalid").addClass("is-valid");
-            }else{
-                nameError = "Only letters, spaces, hyphens and apostrophes allowed."
-                $("#nameError").show();
-                $("#name").removeClass("is-valid").addClass("is-invalid");
-            }
-            $("#nameError").html('<div class="alert alert-danger" role="alert" style="padding:5px; margin:3px;">' + nameError + '</div>');
-
-            sEmail = $("#email").val();
-            if ($("#email").val() === "") {
-                emailError = "Email required";
-                $("#emailError").show();
-                $("#email").removeClass("is-valid").addClass("is-invalid");
-            } else if (validateEmail(sEmail)) {
-                emailError = "";
-                $("#emailError").hide();
-                $("#email").removeClass("is-invalid").addClass("is-valid");
-            }else{
-                emailError = "Invalid email address";
-                $("#emailError").show();
-                $("#email").removeClass("is-valid").addClass("is-invalid");
-            }
-            $("#emailError").html('<div class="alert alert-danger" role="alert" style="padding:5px; margin:3px;">' + emailError + '</div>');
-
-            if ($("#message").val() === "") {
-                messageError = "Please enter your message";
-                $("#messageError").show();
-                $("#message").removeClass("is-valid").addClass("is-invalid");
-
-            }else{
-                messageError = "";
-                $("#messageError").hide();
-                $("#message").removeClass("is-invalid").addClass("is-valid");
-            }
-            $("#messageError").html('<div class="alert alert-danger" role="alert" style="padding:5px; margin:3px;">' + messageError + '</div>');
-
-            if (nameError || emailError || messageError !== "") {
-                // check for errors - if found block submit
-                return;
-            }else{
-                // all good - allow submit
-                let name = $("#name").val();
-                let email = $("#email").val();
-                let desc = $("#message").val();
-                let data = {
-                    name: name,
-                    email: email,
-                    desc: desc
+            // Function to validate email address through regular expression.
+            function validateEmail(sEmail) {
+                let filter = /^[\w-.+]+@[a-zA-Z0-9.-]+.[a-zA-z0-9]{2,4}$/;
+                if (filter.test(sEmail)) {
+                    return true;
+                } else {
+                    return false;
                 };
-                $.ajax({
-                    type: "POST",
-                    url: "https://62sz3zea1f.execute-api.eu-west-1.amazonaws.com/a1/contact-us",
-                    dataType: "json",
-                    crossDomain: "true",
-                    contentType: "application/json; charset=utf-8",
-                    data: JSON.stringify(data),
+            };
+            $("#messageSuccess").hide();
+            $("#name, #email, #message").css("border-color", "");
 
-                    success: function () {
-                        // clear form and show a success message
-                        $("#messageSuccess").show();
-                        $("#name, #email, #message").removeClass("is-valid");
-                        $("#name, #email, #message").css("border-color", "#e1e1e1")
-                        document.getElementById("contact-form").reset();
-                    },
-                    error: function () {
-                        alert("An error occurred. Please try again later.");
-                    }
-                });
-                return true;
+            // Form validation start.
+            function submitToAPI(e) {
+                e.preventDefault();
+
+                let validName = false;
+                let validEmail = false;
+                let validMessage = false;
+                let validSecurity = false;
+
+                if ($("#name").val().match("^[a-zA-Z' .,\s-]{0,150}$") && $("#name").val() != "") {
+                    $("#name").removeClass("is-invalid").addClass("is-valid");
+                    validName = true;
+                } else {
+                    $("#name").removeClass("is-valid").addClass("is-invalid");
+                }
+                sEmail = $("#email").val();
+                if (validateEmail(sEmail)) {
+                    $("#email").removeClass("is-invalid").addClass("is-valid");
+                    validEmail = true;
+                } else {
+                    $("#email").removeClass("is-valid").addClass("is-invalid");
+                }
+                if ($("#message").val() === "") {
+                    $("#message").removeClass("is-valid").addClass("is-invalid");
+                } else {
+                    $("#message").removeClass("is-invalid").addClass("is-valid");
+                    validMessage = true;
+                }
+                if ($("#security").val() != "100") {
+                    $("#security").removeClass("is-valid").addClass("is-invalid");
+                } else {
+                    $("#security").removeClass("is-invalid").addClass("is-valid");
+                    validSecurity = true;
+                }
+
+                if (validName != true || validEmail != true || validMessage != true || validSecurity != true) {
+                    return;
+                } else {
+                    // All good - compile data and submit.
+                    let data = {
+                        name: $("#name").val(),
+                        email: $("#email").val(),
+                        desc: $("#message").val()
+                    };
+                    $.ajax({
+                        type: "POST",
+                        url: "https://62sz3zea1f.execute-api.eu-west-1.amazonaws.com/a1/contact-us",
+                        dataType: "json",
+                        crossDomain: "true",
+                        contentType: "application/json; charset=utf-8",
+                        data: JSON.stringify(data),
+
+                        success: function () {
+                            $("#messageSuccess").show();
+                            $("#name, #email, #message, #security").removeClass("is-valid");
+                            $("#name, #email, #message, #security").css("border-color", "#e1e1e1")
+                            document.getElementById("contact-form").reset();
+                        },
+                        error: function () {
+                            alert("An error occurred. Please try again later.");
+                        }
+                    });
+                    return true;
+                }
             }
-        }
     </script>
 </body>
 </html>
